; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_gem.c_drm_gem_object_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_gem.c_drm_gem_object_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_gem_object = type { i32 }
%struct.drm_device = type { i32 }
%struct.drm_file = type { i32 }

@drm_gem_object_reference = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.drm_gem_object* @drm_gem_object_lookup(%struct.drm_device* %0, %struct.drm_file* %1, i32 %2) #0 {
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca %struct.drm_file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.drm_gem_object*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store %struct.drm_file* %1, %struct.drm_file** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.drm_file*, %struct.drm_file** %5, align 8
  %9 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %8, i32 0, i32 0
  %10 = load i32, i32* %6, align 4
  %11 = load i64, i64* @drm_gem_object_reference, align 8
  %12 = inttoptr i64 %11 to void (i8*)*
  %13 = call %struct.drm_gem_object* @drm_gem_name_ref(i32* %9, i32 %10, void (i8*)* %12)
  store %struct.drm_gem_object* %13, %struct.drm_gem_object** %7, align 8
  %14 = load %struct.drm_gem_object*, %struct.drm_gem_object** %7, align 8
  ret %struct.drm_gem_object* %14
}

declare dso_local %struct.drm_gem_object* @drm_gem_name_ref(i32*, i32, void (i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
